Changed log:pass output

--- a/app/views/main_page/MainPageGen.html.erb
+++ b/app/views/main_page/MainPageGen.html.erb
@@ -41,6 +41,7 @@
 
     <tbody>
       <% $user_tasks=Task.select{|task| task.assignee_id == current_auth_user.id}  
+      $counter=0
         $user_tasks.each do |task|  
          $counter+=1 %>
         <tr>
