--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,6 +8,7 @@
       </div>
 </nav>
 <% if current_auth_user.type == "Admin" %>
+<!--Admin-->
 <div class="container">
 <div class="row">
 <div class="col-10">
@@ -17,10 +18,10 @@
       <tr>
         <th>Subject</th>
         <th>Assigned user</th>
-        <th>Status</th>
         <th>Description</th>
         <th>Creator</th>
         <th>Type</th>
+        <th>Status</th>
       </tr>
     </thead>
 
@@ -28,32 +29,19 @@
         <tr>
         <th><%= @task.subject %></th>
         <th><%= User.find(@task.assignee_id).email %></th>
-        <th>
-                  <% (["To Do","In Progress","In Review","Done"]).each do |st|%>
-                          <% if st == @task.status %>
-                          <div class="form-check">
-                          <label class="form-check-label">
-                          <input type="radio" class="form-check-input" name="optradio" checked="checked" 
-                          <%= (@task.status!="In Review" and @task.status!="Done") ? ((st=="Done") ? "disabled" : "" ) : "disabled" %>
-                          ><%= st %> </label>
-                          </div>
-                          <% else %>
-                          <div class="form-check">
-                          <label class="form-check-label">
-                          <input type="radio" class="form-check-input" name="optradio" 
-                          <%= (@task.status!="In Review" and @task.status!="Done") ? ((st=="Done") ? "disabled" : "" ) : "disabled" %>
-                          ><%= st %> </label>
-                          </div>
-                          <% end %>
-                  <% end %>
         <th><%= @task.description %></th>
         <th><%= Admin.find(@task.created_by_id).email %></th>
         <th><%= @task.type %></th>
         <th>
+                 <%= simple_form_for :task, url: task_path(@task), method: :patch do |t| %> 
+                 <%= t.input :status, selected: @task.status, label: false, collection: ["To Do","In Progress","In Review","Done"] %>
+                 
+        <th>
+        <%= t.submit "Update", { class: 'btn btn-secondary' }%>
+        <% end %>
         <%= link_to "Edit", edit_task_path(@task), :class => "btn btn-info" %>
         <%= button_to "Delete", task_path(@task), :method => :delete, data: {confirm: "Are you sure about that?"}, :class => "btn btn-danger" %>
         </th>
-        
         </tr>
     </tbody>
   </table>
@@ -94,8 +82,9 @@
 <div class="col-3"></div>
 </div>
 </div>
-<a class="btn btn-secondary btn-block" role="button" <%= link_to "Back", root_path %></a>
 <%  else  %>
+<!--User-->
+
 <div class="container" >
 <div class="row">
 <div class="col-10"> 
@@ -104,9 +93,10 @@
       <tr>
         <th>Subject</th>
         <th>Assigned user</th>
-        <th>Status</th>
         <th>Description</th>
         <th>Creator</th>
+        <th>Type</th>
+        <th>Status</th>
       </tr>
     </thead>
 
@@ -114,27 +104,26 @@
         <tr>
         <th><%= @task.subject %></th>
         <th><%= User.find(@task.assignee_id).email %></th>
-        <th>
-                  <% (["To Do","In Progress","In Review","Done"]).each do |st|%>
-                          <% if st == @task.status %>
-                          <div class="form-check">
-                          <label class="form-check-label">
-                          <input type="radio" class="form-check-input" name="optradio" checked="checked" 
-                          <%= (@task.status!="In Review" and @task.status!="Done") ? ((st=="Done") ? "disabled" : "" ) : "disabled" %>
-                          ><%= st %> </label>
-                          </div>
-                          <% else %>
-                          <div class="form-check">
-                          <label class="form-check-label">
-                          <input type="radio" class="form-check-input" name="optradio" 
-                          <%= (@task.status!="In Review" and @task.status!="Done") ? ((st=="Done") ? "disabled" : "" ) : "disabled" %>
-                          ><%= st %> </label>
-                          </div>
-                          <% end %>
-                  <% end %>
         <th><%= @task.description %></th>
         <th><%= Admin.find(@task.created_by_id).email %></th>
-        <th><a class="btn btn-secondary" role="button" <%= link_to "Submit", root_path %></a></th>
+        <th><%= @task.type %></th>
+        <th>
+        
+        <%= simple_form_for :task, url: task_path(@task), method: :patch do |t| %>
+        <% if @task.status=="To Do" or @task.status=="In Progress" %>
+        <%= t.input :status, selected: @task.status, label: false, collection: ["To Do","In Progress","In Review"] %>
+        <th>
+            <%= t.submit "Update", { class: 'btn btn-secondary' }%>
+         </th>
+         <% else %>   
+         <%= @task.status %>
+        <% end %>
+        </th>
+        <% end %>
+        <% if @task.status=="In Review" or @task.status=="Done" %>
+        <%= @task.status %>
+        <% end %>
+        
         </tr>
     </tbody>
   </table>
@@ -174,5 +163,5 @@
 </div>
 </div>
 <%  end  %>
-
+<a class="btn btn-secondary btn-block" role="button" <%= link_to "Back", root_path %></a>
 </div>
