--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -6,19 +6,19 @@
         <a class="dropdown-item" <%= link_to 'Sign out', destroy_auth_user_session_path  %></a>
       </div>
 </nav>
-<div class="display-4" align="center">Edit Task</div>
+<div class="display-4" align="center">New Task</div>
 <div class="container">
 <div class="row">
 <div class="col-3"></div>
 <div class="col-6" align="center">
 
-<%= simple_form_for :task, url: task_path(@task), method: :patch do |t| %>
+<%= simple_form_for :task do |t| %>
   <div class="field">
     <%= "Subject" %>
     <%= t.input :subject, label: false %>
   </div>
 <div class="field">
-    <%= "Assignee id" %><br />
+    <%= "Assignee id"  %><br />
     <%= t.input :assignee_id, default: User.ids.sample, label: false, collection: User.ids %>
   </div>
   <div class="field">
@@ -33,8 +33,9 @@
     <%= "Type" %>
     <%= t.input :type, default: "Issue", label: false, collection: ["Issue","Story"]%><br>
   </div>
+  <%= t.input :created_by_id, :input_html => {:value => current_auth_user.id} , :as => :hidden,  label: false %>
   <div class="actions ">
-    <%= t.submit "Update", { class: 'btn btn-secondary' }%>
+    <%= t.submit "Create", { class: 'btn btn-secondary' }%>
   </div>
 <% end %>
 
