--- a/app/views/main_page/MainPageGen.html.erb
+++ b/app/views/main_page/MainPageGen.html.erb
@@ -4,7 +4,10 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-      <strong><%= current_auth_user.email %></strong></a>
+      <strong><%= current_auth_user.email %></strong>
+      </a>
+      <%= link_to 'SQL1', sql1_path, class: 'btn btn-info' %>
+      <%= link_to 'SQL2', sql2_path, class: 'btn btn-info' %>
       <div class="dropdown-menu">
         <a class="dropdown-item" <%= link_to 'Edit profile', edit_auth_user_registration_path %></a>
         <a class="dropdown-item" <%= link_to 'Sign out', destroy_auth_user_session_path  %></a>
